define crunch cli and tasks - add matrix api

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,13 @@ clap = "2.33"
 lazy_static = "1.4"
 derive_more = "0.99"
 async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
-async-trait = "^0.1.49"
 async-recursion = "0.3.2"
-# actix-web = "3"
-# actix-cors = "0.5.4"
-# mobc = { version = "0.7", default-features = false, features = ["async-std"] }
 serde = "1"
 thiserror = "^1.0.24"
-# substrate-subxt = { git = "https://github.com/turboflakes/substrate-subxt", branch = "develop" }
-substrate-subxt = { path = "/Users/paulo/Development/github.com/turboflakes/substrate-subxt", branch="develop" }
 chrono = "0.4"
-codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive", "full"] }
+codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "full"] }
 regex = "1.4.6"
+reqwest = { version = "0.11", features = ["json"] }
+url = "2.2.2"
+base64 = "0.13.0"
+substrate-subxt = { git = "https://github.com/turboflakes/substrate-subxt", branch = "develop" }
