--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
-CRUNCH_SUBSTRATE_WS_URL=wss://westend-rpc.polkadot.io
-CRUNCH_INTERVAL=21600
-RUST_LOG="crunch=debug,substrate_subxt=debug"
+# crunch CLI environment variables 
+#
+# Crunch flakes for the stash addresses - specify more than one like, e.g. stash_1,stash_2,stash_3.
+CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n,5E7QrLDGHVU3uP4RjnKsryecZXcWQ7oJwWFypRAoHCL1nAnG
+#
+# Substrate websocket endpoint to connect to, e.g. wss://kusama-rpc.polkadot.io
+# CRUNCH_SUBSTRATE_WS_URL=wss://westend-rpc.polkadot.io
+#
+# Maximum number of unclaimed eras to which an extrinsic payout will be submitted. (default is 4)
+CRUNCH_MAXIMUM_PAYOUTS=4
+#
+# Matrix configuration variables
+CRUNCH_MATRIX_USERNAME=turboflakes
+CRUNCH_MATRIX_PASSWORD=notthateasypassword
+CRUNCH_MATRIX_SERVER=matrix.org
+# 
+# Default log
+RUST_LOG="crunch=info"
