review cli help descriptions and flags

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,20 @@
-# crunch CLI environment variables 
+# crunch CLI configuration variables 
 #
-# Crunch flakes for the stash addresses - specify more than one like, e.g. stash_1,stash_2,stash_3.
+# [CRUNCH_STASHES] Validator stash addresses for which 'crunch search' and 'crunch flakes' will be applied. 
+# If needed specify more than one (e.g. stash_1,stash_2,stash_3).
 CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n,5E7QrLDGHVU3uP4RjnKsryecZXcWQ7oJwWFypRAoHCL1nAnG
 #
-# Substrate websocket endpoint to connect to, e.g. wss://kusama-rpc.polkadot.io
-# CRUNCH_SUBSTRATE_WS_URL=wss://westend-rpc.polkadot.io
+# [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to connect. 
+# (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence than <CHAIN> argument)
+#CRUNCH_SUBSTRATE_WS_URL=wss://westend-rpc.polkadot.io
 #
-# Maximum number of unclaimed eras to which an extrinsic payout will be submitted. (default is 4)
+# [CRUNCH_MAXIMUM_PAYOUTS] Maximum number of unclaimed eras for which an extrinsic payout will be submitted. 
+# (e.g. a value of 4 means that if there are unclaimed eras in the last 84 the maximum unclaimed payout calls 
+# for each stash address will be 4). [default: 4]
 CRUNCH_MAXIMUM_PAYOUTS=4
+#
+# [CRUNCH_SEED_FILE] File path containing the private seed phrase to Sign the extrinsic payout call. [default: .private.seed]
+#CRUNCH_SEED_FILE=.private.seed.example
 #
 # Matrix configuration variables
 CRUNCH_MATRIX_USERNAME=turboflakes
