--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n,5E7QrLDGHVU3uP4R
 # for each stash address will be 4). [default: 4]
 CRUNCH_MAXIMUM_PAYOUTS=4
 #
-# [CRUNCH_SEED_FILE] File path containing the private seed phrase to Sign the extrinsic payout call. [default: .private.seed]
-#CRUNCH_SEED_FILE=.private.seed.example
+# [CRUNCH_SEED_PATH] File path containing the private seed phrase to Sign the extrinsic payout call. [default: .private.seed]
+#CRUNCH_SEED_PATH=.private.seed.example
 #
 # Matrix configuration variables
 CRUNCH_MATRIX_USERNAME=turboflakes
