--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,5 @@ regex = "1.4.6"
 reqwest = { version = "0.11", features = ["json"] }
 url = "2.2.2"
 base64 = "0.13.0"
+percent-encoding = "2.1.0"
 substrate-subxt = { git = "https://github.com/turboflakes/substrate-subxt", branch = "develop" }
