set matrix user and bot user

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,9 @@ CRUNCH_MAXIMUM_PAYOUTS=4
 #CRUNCH_SEED_PATH=.private.seed.example
 #
 # Matrix configuration variables
-CRUNCH_MATRIX_USERNAME=turboflakes
-CRUNCH_MATRIX_PASSWORD=notthateasypassword
-CRUNCH_MATRIX_SERVER=matrix.org
+CRUNCH_MATRIX_USER=@your-regular-matrix-account:matrix.org
+CRUNCH_MATRIX_BOT_USER=@your-own-crunch-bot-account:matrix.org
+CRUNCH_MATRIX_BOT_PASSWORD=anotthateasypassword
 # 
 # Default log
 RUST_LOG="crunch=info"
