--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,5 @@ reqwest = { version = "0.11", features = ["json"] }
 url = "2.2.2"
 base64 = "0.13.0"
 percent-encoding = "2.1.0"
+hex-literal = "0.3.3"
 substrate-subxt = { git = "https://github.com/turboflakes/substrate-subxt", branch = "develop" }
