--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -48,7 +48,7 @@ jobs:
           tag_name: ${{ steps.get_tag.outputs.tag }}
           release_name: Release ${{ steps.get_tag.outputs.tag }}
           draft: false
-          prerelease: true
+          prerelease: false
 
       - name: Upload Release Asset
         id: upload-release-asset 
