--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # crunch CLI configuration variables 
 #
-# [CRUNCH_STASHES] Validator stash addresses for which 'crunch search' and 'crunch flakes' will be applied. 
+# [CRUNCH_STASHES] Validator stash addresses for which 'crunch flakes', 'crunch rewards' or 'crunch view' will be applied. 
 # If needed specify more than one (e.g. stash_1,stash_2,stash_3).
 CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n,5E7QrLDGHVU3uP4RjnKsryecZXcWQ7oJwWFypRAoHCL1nAnG
 #
