--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,25 @@
 # crunch CLI configuration variables 
 #
-# [CRUNCH_STASHES] Validator stash addresses for which 'crunch flakes', 'crunch rewards' or 'crunch view' will be applied. 
+# [CRUNCH_STASHES] Validator stash addresses for which 'crunch flakes', 'crunch rewards'
+# or 'crunch view' will be applied. 
 # If needed specify more than one (e.g. stash_1,stash_2,stash_3).
-CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n,5E7QrLDGHVU3uP4RjnKsryecZXcWQ7oJwWFypRAoHCL1nAnG
+CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 #
-# [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to connect. 
-# (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence than <CHAIN> argument)
+# [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
+# connect. (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence
+# than <CHAIN> argument) 
 #CRUNCH_SUBSTRATE_WS_URL=wss://westend-rpc.polkadot.io
 #
-# [CRUNCH_MAXIMUM_PAYOUTS] Maximum number of unclaimed eras for which an extrinsic payout will be submitted. 
-# (e.g. a value of 4 means that if there are unclaimed eras in the last 84 the maximum unclaimed payout calls 
-# for each stash address will be 4). [default: 4]
+# [CRUNCH_MAXIMUM_PAYOUTS] Maximum number of unclaimed eras for which an extrinsic payout
+# will be submitted. (e.g. a value of 4 means that if there are unclaimed eras in the last
+# 84 the maximum unclaimed payout calls for each stash address will be 4). [default: 4]
 CRUNCH_MAXIMUM_PAYOUTS=4
 #
-# [CRUNCH_SEED_PATH] File path containing the private seed phrase to Sign the extrinsic payout call. [default: .private.seed]
+# [CRUNCH_SEED_PATH] File path containing the private seed phrase to Sign the extrinsic 
+# payout call. [default: .private.seed]
 #CRUNCH_SEED_PATH=.private.seed.example
 #
 # Matrix configuration variables
 CRUNCH_MATRIX_USER=@your-regular-matrix-account:matrix.org
 CRUNCH_MATRIX_BOT_USER=@your-own-crunch-bot-account:matrix.org
 CRUNCH_MATRIX_BOT_PASSWORD=anotthateasypassword
-# 
-# Default log
-RUST_LOG="crunch=info"
