update changelog for new release

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,12 @@ CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 # 84 the maximum unclaimed payout calls for each stash address will be 4). [default: 4]
 CRUNCH_MAXIMUM_PAYOUTS=4
 #
+# [CRUNCH_MAXIMUM_HISTORY_ERAS] Maximum number of history eras for which crunch will look for 
+# unclaimed rewards. The maximum value supported is the one defined by constant history_depth
+# (e.g. a value of 4 means that crunch will only check in the latest 4 eras if there are any 
+# unclaimed rewards for each stash address). [default: 4]
+CRUNCH_MAXIMUM_HISTORY_ERAS=4
+#
 # [CRUNCH_SEED_PATH] File path containing the private seed phrase to Sign the extrinsic 
 # payout call. [default: .private.seed]
 #CRUNCH_SEED_PATH=.private.seed.example
