--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,12 @@ reqwest = { version = "0.11", features = ["json"] }
 url = "2.2.2"
 base64 = "0.13.0"
 rand = "0.8.4"
+
 subxt = { package = "substrate-subxt", git = "https://github.com/turboflakes/substrate-subxt", branch = "develop-vnext" }
 
-# dependencies required for new substrate-subxt package
+# Dependencies required since the changes on the new subxt package
 
 codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
-
 sp-arithmetic = { package = "sp-arithmetic", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.11" }
 sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.11" }
 sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.11" }
