--- a/.github/workflows/release_bot.yml
+++ b/.github/workflows/release_bot.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           room_id: ${{ matrix.channel }}
           access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
-          message: "<h4>Hey, <code>crunch ${{github.event.release.tag_name}}</code> has been released ✌️</h4>🔖 ${{github.event.release.html_url}}<br/><br/>${{github.event.release.body}}<br/><br/>"
+          message: "<h4>Hey, <code>crunch ${{github.event.release.tag_name}}</code> has been released ✌️</h4>🔖 ${{github.event.release.html_url}}<br/><br/>@room<br/>${{github.event.release.body}}<br/><br/>"
           server: "matrix.org"
