--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 # [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
 # connect. (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence
 # than <CHAIN> argument) 
-#CRUNCH_SUBSTRATE_WS_URL=wss://westend-rpc.polkadot.io
+#CRUNCH_SUBSTRATE_WS_URL=ws://localhost:9944
 #
 # [CRUNCH_MAXIMUM_PAYOUTS] Maximum number of unclaimed eras for which an extrinsic payout
 # will be submitted. (e.g. a value of 4 means that if there are unclaimed eras in the last
