--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,13 +27,10 @@ url = "2.2.2"
 base64 = "0.13.0"
 rand = "0.8.4"
 
-subxt = { package = "subxt", git = "https://github.com/turboflakes/subxt", rev = "6e60b25" }
+subxt = { package = "subxt", git = "https://github.com/turboflakes/subxt", rev = "41bd8cc" }
+# subxt = { path = "/Users/paulo/Development/github.com/turboflakes/subxt" }
 # Dependencies required since the changes on the new subxt package
 
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
-sp-arithmetic = { package = "sp-arithmetic", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.12" }
-sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.12" }
-sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.12" }
-sp-runtime = { package = "sp-runtime", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.12" }
 
 
