--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crunch"
-version = "0.3.2"
+version = "0.4.0-rc1"
 authors = ["Paulo <paulo@turboflakes.com>"]
 description = "Crunch is a command-line interface (CLI) to claim staking rewards (flakes) every X hours for Substrate-based chains" 
 edition = "2018"
@@ -16,7 +16,7 @@ clap = "2.33"
 lazy_static = "1.4"
 derive_more = "0.99"
 async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
-async-recursion = "0.3.2"
+async-recursion = "0.4.0-rc1"
 serde = "1"
 serde_json = "1.0.68"
 thiserror = "^1.0.24"
