--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "crunch"
 version = "0.4.0"
-authors = ["Paulo <paulo@turboflakes.com>"]
+authors = ["Paulo <paulo@turboflakes.io>"]
 description = "Crunch is a command-line interface (CLI) to claim staking rewards (flakes) every X hours for Substrate-based chains" 
 edition = "2018"
 
