implement optional flag stashes-url

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,11 @@
 # If needed specify more than one (e.g. stash_1,stash_2,stash_3).
 CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 #
+# [CRUNCH_STASHES_URL] Alternatively the list of stashes could be defined and available in a remote file.
+# `crunch` will try to fetch the stashes from the endpoint predefined here before triggering the respective payouts
+# Please have a look at the file '.remote.stashes.example' as an example
+#CRUNCH_STASHES_URL=https://raw.githubusercontent.com/turboflakes/crunch/main/.remote.stashes.example
+#
 # [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
 # connect. (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence
 # than <CHAIN> argument) 
