--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,12 @@ reqwest = { version = "0.11", features = ["json"] }
 url = "2.2.2"
 base64 = "0.13.0"
 rand = "0.8.4"
+tokio = { version = "1", features = ["full"] }
 
 subxt = { package = "subxt", git = "https://github.com/turboflakes/subxt", rev = "41bd8cc" }
 # subxt = { path = "/Users/paulo/Development/github.com/turboflakes/subxt" }
 # Dependencies required since the changes on the new subxt package
+
 
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
 
