--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# scouty dependencies
 dotenv = "0.15"
 envy = "0.4"
 log = "0.4"
-env_logger = "0.6"
 clap = "2.33"
 lazy_static = "1.4"
 derive_more = "0.99"
-async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
 async-recursion = "0.3.2"
-serde = "1"
+serde = "1.0.132"
 serde_json = "1.0.68"
 thiserror = "^1.0.24"
 chrono = "0.4"
@@ -26,13 +25,10 @@ reqwest = { version = "0.11", features = ["json"] }
 url = "2.2.2"
 base64 = "0.13.0"
 rand = "0.8.4"
-tokio = { version = "1", features = ["full"] }
-
-subxt = { package = "subxt", git = "https://github.com/turboflakes/subxt", rev = "41bd8cc" }
-# subxt = { path = "/Users/paulo/Development/github.com/turboflakes/subxt" }
-# Dependencies required since the changes on the new subxt package
-
-
-codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
-
-
+# subxt dependencies
+subxt = { git = "https://github.com/paritytech/subxt", rev = "8b19549" }
+async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
+env_logger = "0.9.0"
+futures = "0.3.13"
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
+hex = "0.4.3"
