--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# scouty dependencies
+# crunch dependencies
 dotenv = "0.15"
 envy = "0.4"
 log = "0.4"
@@ -26,8 +26,8 @@ url = "2.2.2"
 base64 = "0.13.0"
 rand = "0.8.4"
 # subxt dependencies
-# subxt = { git = "https://github.com/paritytech/subxt", rev = "8b19549" }
 subxt = { rev = "6d731725", git = "https://github.com/paritytech/subxt" }
+#subxt = { version = "0.22.0", git = "https://github.com/paritytech/subxt" }
 async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
 env_logger = "0.9.0"
 futures = "0.3.13"
