--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,7 @@ url = "2.2.2"
 base64 = "0.13.0"
 rand = "0.8.4"
 # subxt dependencies
-subxt = { rev = "6d731725", git = "https://github.com/paritytech/subxt" }
-#subxt = { version = "0.22.0", git = "https://github.com/paritytech/subxt" }
+subxt = "0.22.0"
 async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
 env_logger = "0.9.0"
 futures = "0.3.13"
