add crunch bot password note

--- a/.env.example
+++ b/.env.example
@@ -36,4 +36,5 @@ CRUNCH_MAXIMUM_CALLS=8
 # Matrix configuration variables
 CRUNCH_MATRIX_USER=@your-regular-matrix-account:matrix.org
 CRUNCH_MATRIX_BOT_USER=@your-own-crunch-bot-account:matrix.org
-CRUNCH_MATRIX_BOT_PASSWORD=anotthateasypassword
+# NOTE: type the bot password within "" so that any special character could be parsed correctly into a string.
+CRUNCH_MATRIX_BOT_PASSWORD="anotthateasypassword"
