--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,14 @@
 # If needed specify more than one (e.g. stash_1,stash_2,stash_3).
 CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 #
-# [CRUNCH_STASHES_URL] Alternatively the list of stashes could be defined and available in a remote file.
+# [CRUNCH_STASHES_URL] Additionally the list of stashes could be defined and available in a remote file.
 # `crunch` will try to fetch the stashes from the endpoint predefined here before triggering the respective payouts
 # Please have a look at the file '.remote.stashes.example' as an example
 #CRUNCH_STASHES_URL=https://raw.githubusercontent.com/turboflakes/crunch/main/.remote.stashes.example
+#
+# [CRUNCH_POOL_IDS] Additionally the list of stashes could be defined from a single or more Nomination Pool Ids.
+# `crunch` will try to fetch the nominees of the respective pool id predefined here before triggering the respective payouts
+#CRUNCH_POOL_IDS=10,15
 #
 # [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
 # connect. (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence
@@ -26,8 +30,8 @@ CRUNCH_MAXIMUM_PAYOUTS=4
 # unclaimed rewards for each stash address). [default: 4]
 CRUNCH_MAXIMUM_HISTORY_ERAS=4
 #
-# [CRUNCH_MAXIMUM_CALLS] Maximum number of calls in a single batch. [default: 8]
-CRUNCH_MAXIMUM_CALLS=8
+# [CRUNCH_MAXIMUM_CALLS] Maximum number of calls in a single batch. [default: 4]
+CRUNCH_MAXIMUM_CALLS=6
 #
 # [CRUNCH_SEED_PATH] File path containing the private seed phrase to Sign the extrinsic 
 # payout call. [default: .private.seed]
