use force_batch, fetch pool members

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 # `crunch` will try to fetch the nominees of the respective pool id predefined here before triggering the respective payouts
 #CRUNCH_POOL_IDS=10,15
 #
+# [CRUNCH_POOL_MEMBERS_COMPOUND_ENABLED] This allows 'crunch' to compound rewards for every member that belongs to the pools 
+# previously selected by CRUNCH_POOL_IDS. Note that members have to have their permissions set as PermissionlessCompound or PermissionlessAll.
+#CRUNCH_POOL_MEMBERS_COMPOUND_ENABLED=true
+#
 # [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
 # connect. (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence
 # than <CHAIN> argument) 
