--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,9 @@ CRUNCH_MATRIX_USER=@your-regular-matrix-account:matrix.org
 CRUNCH_MATRIX_BOT_USER=@your-own-crunch-bot-account:matrix.org
 # NOTE: type the bot password within "" so that any special character could be parsed correctly into a string.
 CRUNCH_MATRIX_BOT_PASSWORD="anotthateasypassword"
+#
+# ONE-T configuration variables
+CRUNCH_ONET_API_ENABLED=true
+CRUNCH_ONET_API_URL=https://kusama-onet-api-beta.turboflakes.io
+CRUNCH_ONET_API_KEY=crunch-101
+CRUNCH_ONET_NUMBER_LAST_SESSIONS=6
