fix nominees payout, members compound threshold

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
+# ----------------------------------------------------------------
 # crunch CLI configuration variables 
-#
+# ----------------------------------------------------------------
 # [CRUNCH_STASHES] Validator stash addresses for which 'crunch flakes', 'crunch rewards'
 # or 'crunch view' will be applied. 
 # If needed specify more than one (e.g. stash_1,stash_2,stash_3).
@@ -9,14 +10,6 @@ CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 # `crunch` will try to fetch the stashes from the endpoint predefined here before triggering the respective payouts
 # Please have a look at the file '.remote.stashes.example' as an example
 #CRUNCH_STASHES_URL=https://raw.githubusercontent.com/turboflakes/crunch/main/.remote.stashes.example
-#
-# [CRUNCH_POOL_IDS] Additionally the list of stashes could be defined from a single or more Nomination Pool Ids.
-# `crunch` will try to fetch the nominees of the respective pool id predefined here before triggering the respective payouts
-#CRUNCH_POOL_IDS=10,15
-#
-# [CRUNCH_POOL_MEMBERS_COMPOUND_ENABLED] This allows 'crunch' to compound rewards for every member that belongs to the pools 
-# previously selected by CRUNCH_POOL_IDS. Note that members have to have their permissions set as PermissionlessCompound or PermissionlessAll.
-#CRUNCH_POOL_MEMBERS_COMPOUND_ENABLED=true
 #
 # [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
 # connect. (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence
@@ -41,14 +34,40 @@ CRUNCH_MAXIMUM_CALLS=6
 # payout call. [default: .private.seed]
 #CRUNCH_SEED_PATH=.private.seed.example
 #
+# ----------------------------------------------------------------
 # Matrix configuration variables
+# ----------------------------------------------------------------
 CRUNCH_MATRIX_USER=@your-regular-matrix-account:matrix.org
 CRUNCH_MATRIX_BOT_USER=@your-own-crunch-bot-account:matrix.org
 # NOTE: type the bot password within "" so that any special character could be parsed correctly into a string.
 CRUNCH_MATRIX_BOT_PASSWORD="anotthateasypassword"
-#
+# ----------------------------------------------------------------
 # ONE-T configuration variables
+# ----------------------------------------------------------------
 CRUNCH_ONET_API_ENABLED=true
 CRUNCH_ONET_API_URL=https://kusama-onet-api-beta.turboflakes.io
 CRUNCH_ONET_API_KEY=crunch-101
 CRUNCH_ONET_NUMBER_LAST_SESSIONS=6
+# ----------------------------------------------------------------
+# Nomination Pools configuration variables
+# ----------------------------------------------------------------
+# [CRUNCH_POOL_IDS] Additionally the list of stashes could be defined from a single or more Nomination Pool Ids.
+# `crunch` will try to fetch the nominees of the respective pool id predefined here before triggering the respective payouts
+#CRUNCH_POOL_IDS=10,15
+#
+# [CRUNCH_POOL_MEMBERS_COMPOUND_THRESHOLD] Define minimum pending rewards threshold in PLANCKS. 
+# Note: only pending rewards above the threshold are include in the auto-compound batch.
+#CRUNCH_POOL_MEMBERS_COMPOUND_THRESHOLD=1000000
+#
+# [CRUNCH_POOL_MEMBERS_COMPOUND_ENABLED] Enable auto-compound rewards for every member that belongs to the pools 
+# previously selected by CRUNCH_POOL_IDS. Note that members have to have their permissions 
+# set as PermissionlessCompound or PermissionlessAll.
+#CRUNCH_POOL_MEMBERS_COMPOUND_ENABLED=true
+#
+# [CRUNCH_ACTIVE_NOMINEES_PAYOUTS_ENABLED] Enable payouts only for ACTIVE nominees assigned to the pools 
+# previously selected by CRUNCH_POOL_IDS.
+#CRUNCH_ACTIVE_NOMINEES_PAYOUTS_ENABLED=true
+#
+# [CRUNCH_ALL_NOMINEES_PAYOUTS_ENABLED] Enable payouts for ALL nominees assigned to the pools 
+# previously selected by CRUNCH_POOL_IDS.
+#CRUNCH_ALL_NOMINEES_PAYOUTS_ENABLED=true
