--- a/.env.example
+++ b/.env.example
@@ -53,21 +53,26 @@ CRUNCH_ONET_NUMBER_LAST_SESSIONS=6
 # ----------------------------------------------------------------
 # [CRUNCH_POOL_IDS] Additionally the list of stashes could be defined from a single or more Nomination Pool Ids.
 # `crunch` will try to fetch the nominees of the respective pool id predefined here before triggering the respective payouts
-#CRUNCH_POOL_IDS=10,15
+CRUNCH_POOL_IDS=10,15
 #
-# [CRUNCH_POOL_MEMBERS_COMPOUND_THRESHOLD] Define minimum pending rewards threshold in PLANCKS. 
-# Note: only pending rewards above the threshold are include in the auto-compound batch.
-#CRUNCH_POOL_MEMBERS_COMPOUND_THRESHOLD=1000000
+# [CRUNCH_POOL_COMPOUND_THRESHOLD] Define minimum pending rewards threshold in PLANCKS. 
+# Note: only pending rewards above the threshold are included in the auto-compound batch.
+CRUNCH_POOL_COMPOUND_THRESHOLD=1000000
 #
 # [CRUNCH_POOL_MEMBERS_COMPOUND_ENABLED] Enable auto-compound rewards for every member that belongs to the pools 
 # previously selected by CRUNCH_POOL_IDS. Note that members have to have their permissions 
 # set as PermissionlessCompound or PermissionlessAll.
 #CRUNCH_POOL_MEMBERS_COMPOUND_ENABLED=true
 #
-# [CRUNCH_ACTIVE_NOMINEES_PAYOUTS_ENABLED] Enable payouts only for ACTIVE nominees assigned to the pools 
-# previously selected by CRUNCH_POOL_IDS.
-#CRUNCH_ACTIVE_NOMINEES_PAYOUTS_ENABLED=true
+# [CRUNCH_POOL_OPERATOR_COMPOUND_ENABLED] Enable auto-compound rewards for the pool operator member that belongs to the pools 
+# previously selected by CRUNCH_POOL_IDS. Note that operator member account have to have their permissions 
+# set as PermissionlessCompound or PermissionlessAll.
+CRUNCH_POOL_OPERATOR_COMPOUND_ENABLED=true
 #
-# [CRUNCH_ALL_NOMINEES_PAYOUTS_ENABLED] Enable payouts for ALL nominees assigned to the pools 
+# [CRUNCH_POOL_ACTIVE_NOMINEES_PAYOUT_ENABLED] Enable payouts only for ACTIVE nominees assigned to the pools 
 # previously selected by CRUNCH_POOL_IDS.
-#CRUNCH_ALL_NOMINEES_PAYOUTS_ENABLED=true
+#CRUNCH_POOL_ACTIVE_NOMINEES_PAYOUT_ENABLED=true
+#
+# [CRUNCH_POOL_ALL_NOMINEES_PAYOUT_ENABLED] Enable payouts for ALL nominees assigned to the pools 
+# previously selected by CRUNCH_POOL_IDS.
+#CRUNCH_POOL_ALL_NOMINEES_PAYOUT_ENABLED=true
