--- a/.env.example
+++ b/.env.example
@@ -44,10 +44,18 @@ CRUNCH_MATRIX_BOT_PASSWORD="anotthateasypassword"
 # ----------------------------------------------------------------
 # ONE-T configuration variables
 # ----------------------------------------------------------------
-CRUNCH_ONET_API_ENABLED=true
-CRUNCH_ONET_API_URL=https://kusama-onet-api-beta.turboflakes.io
-CRUNCH_ONET_API_KEY=crunch-101
-CRUNCH_ONET_NUMBER_LAST_SESSIONS=6
+# Note: If ONET_API_ENABLED equals true, by default Crunch will try to fetch the validator grade from the respective 
+# network it is connected to.
+#CRUNCH_ONET_API_ENABLED=true
+#
+# [CRUNCH_ONET_API_URL] Define a custom ONET backend endpoint
+#CRUNCH_ONET_API_URL=https://kusama-onet-api-beta.turboflakes.io
+#
+# [CRUNCH_ONET_API_KEY] Define a custom ONET api key.
+#CRUNCH_ONET_API_KEY=crunch-101
+#
+# [CRUNCH_ONET_NUMBER_LAST_SESSIONS] Define the number of last sessions the grade is evaluated. Default is 6.
+#CRUNCH_ONET_NUMBER_LAST_SESSIONS=6
 # ----------------------------------------------------------------
 # Nomination Pools configuration variables
 # ----------------------------------------------------------------
