review plancks in example

--- a/.env.example
+++ b/.env.example
@@ -49,7 +49,7 @@ CRUNCH_MATRIX_BOT_PASSWORD="anotthateasypassword"
 #CRUNCH_ONET_API_ENABLED=true
 #
 # [CRUNCH_ONET_API_URL] Define a custom ONET backend endpoint
-#CRUNCH_ONET_API_URL=https://kusama-onet-api-beta.turboflakes.io
+#CRUNCH_ONET_API_URL=https://polkadot-onet-api.turboflakes.io
 #
 # [CRUNCH_ONET_API_KEY] Define a custom ONET api key.
 #CRUNCH_ONET_API_KEY=crunch-101
@@ -61,10 +61,12 @@ CRUNCH_MATRIX_BOT_PASSWORD="anotthateasypassword"
 # ----------------------------------------------------------------
 # [CRUNCH_POOL_IDS] Additionally the list of stashes could be defined from a single or more Nomination Pool Ids.
 # `crunch` will try to fetch the nominees of the respective pool id predefined here before triggering the respective payouts
-CRUNCH_POOL_IDS=10,15
+CRUNCH_POOL_IDS=2
 #
 # [CRUNCH_POOL_COMPOUND_THRESHOLD] Define minimum pending rewards threshold in PLANCKS. 
 # Note: only pending rewards above the threshold are included in the auto-compound batch.
+# 1 DOT = 1000000000 PLANCKS
+# 1 KSM = 100000000000 PLANCKS
 CRUNCH_POOL_COMPOUND_THRESHOLD=100000000000
 #
 # [CRUNCH_POOL_MEMBERS_COMPOUND_ENABLED] Enable auto-compound rewards for every member that belongs to the pools 
