--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -16,15 +16,9 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
         name: Build and push
         uses: docker/build-push-action@v5
         with:
           file: docker/devnet.dockerfile
-          push: true
+          push: false
           tags: crunch/app:latest
