--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -15,6 +15,9 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - run:  echo "disorder match oven ship cancel act scatter material country lizard glance record" > environments/cc3/devnet/.private.seed
+      - run: echo "CRUNCH_STASHES=5GNJqTPyNqANBkUVMN1LPPrxXnFouWXoe2wNSmmEoLctxiZY\n" > environments/cc3/devnet/.env
       -
         name: Build and push
         uses: docker/build-push-action@v5
@@ -22,3 +25,5 @@ jobs:
           file: docker/devnet.dockerfile
           push: false
           tags: crunch/app:latest
+
+      
