--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -16,7 +16,9 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - run:  touch envionrments/cc3/devnet/.env && touch environments/cc3/devnet/.private.seed && echo "disorder match oven ship cancel act scatter material country lizard glance record" > environments/cc3/devnet/.private.seed
+      - run: touch environments/cc3/devnet/.env
+      - run: touch environments/cc3/devnet/.private.seed
+      - run: echo "disorder match oven ship cancel act scatter material country lizard glance record" > environments/cc3/devnet/.private.seed
       - run: echo "CRUNCH_STASHES=5GNJqTPyNqANBkUVMN1LPPrxXnFouWXoe2wNSmmEoLctxiZY\n" > environments/cc3/devnet/.env
       -
         name: Build and push
