--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -27,16 +27,16 @@ jobs:
         env:
           CRUNCH_AGENT_PK: ${{ secrets.DEVNET_CRUNCH_PK }}  
         run: |
-          ls
           echo $CRUNCH_AGENT_PK >> environments/cc3/devnet/.private.seed
-      
+          ls environments/cc3/devnet/
+          
       - name: Set up Crunch configuration
         shell: bash
         env:
           CRUNCH_AGENT_CONFIG: ${{ secrets.DEVNET_CRUNCH_CONFIG }}  
         run: |
-          ls
           echo $CRUNCH_AGENT_CONFIG >> environments/cc3/devnet/.env
+          ls environments/cc3/devnet/
 
       - name: Build and push
         uses: docker/build-push-action@v5
