--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      -
-        name: Set up QEMU
+      
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+        
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         
       - name: Login to Docker Hub
@@ -23,27 +23,21 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up account private key
-        shell: bash
-        env:
-          CRUNCH_AGENT_PK: ${{ secrets.DEVNET_CRUNCH_PK }}  
         run: |
-          echo $CRUNCH_AGENT_PK >> environments/cc3/devnet/.private.seed
+          echo "${{ secrets.DEVNET_CRUNCH_PK }}" >> environments/cc3/devnet/.private.seed
           
       - name: Set up Crunch configuration
-        shell: bash
-        env:
-          CRUNCH_AGENT_CONFIG: ${{ secrets.DEVNET_CRUNCH_CONFIG }}  
         run: |
-          echo $CRUNCH_AGENT_CONFIG >> environments/cc3/devnet/.env
+          echo "${{ secrets.DEVNET_CRUNCH_CONFIG }}" >> environments/cc3/devnet/.env
 
       - name: Check settings
-        shell: bash
         run: |
           ls -a environments/cc3/devnet/
 
       - name: Build and push
         uses: docker/build-push-action@v5
-        with: 
+        with:
+          context: .
           file: docker/devnet.dockerfile
           push: true
           tags: gluwa/crunch-devnet:latest
