--- a/.github/workflows/mainnet.yml
+++ b/.github/workflows/mainnet.yml
@@ -41,5 +41,5 @@ jobs:
         with: 
           file: docker/mainnet.dockerfile
           push: true
-          tags: gluwa/crunch-mainnet:latest
+          tags: gluwa/crunch:devnet-${{github.run_id}}
 
