--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -43,6 +43,6 @@ jobs:
         with: 
           file: docker/testnet.dockerfile
           push: true
-          tags: gluwa/crunch:devnet-${{github.run_id}}
+          tags: gluwa/crunch:testnet-${{github.run_id}}
 
       
