updated workflows to use correct context

--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with: 
+          context: .
           file: docker/devnet.dockerfile
           push: true
           tags: gluwa/crunch-devnet:latest
