--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with: 
+          context: .
           file: docker/testnet.dockerfile
           push: true
           tags: gluwa/crunch-testnet:latest
