set tx tip and mortal period in config

--- a/.env.example
+++ b/.env.example
@@ -37,10 +37,19 @@ CRUNCH_MAXIMUM_CALLS=4
 # ----------------------------------------------------------------
 # Matrix configuration variables
 # ----------------------------------------------------------------
+# [CRUNCH_MATRIX_DISABLED] Disable matrix bot, unless specified otherwise matrix is enabled and respective
+# matrix variables below need to be correctly defined.
+#CRUNCH_MATRIX_DISABLED=false
+#
+# [CRUNCH_MATRIX_PUBLIC_ROOM_DISABLED] Disable public matrix room, unless specified otherwise messages will also
+# be sent to the public room.
+#CRUNCH_MATRIX_PUBLIC_ROOM_DISABLED=true
+#
 CRUNCH_MATRIX_USER=@your-regular-matrix-account:matrix.org
 CRUNCH_MATRIX_BOT_USER=@your-own-crunch-bot-account:matrix.org
 # NOTE: type the bot password within "" so that any special character could be parsed correctly into a string.
 CRUNCH_MATRIX_BOT_PASSWORD="anotthateasypassword"
+#
 # ----------------------------------------------------------------
 # ONE-T configuration variables
 # ----------------------------------------------------------------
@@ -56,6 +65,7 @@ CRUNCH_MATRIX_BOT_PASSWORD="anotthateasypassword"
 #
 # [CRUNCH_ONET_NUMBER_LAST_SESSIONS] Define the number of last sessions the grade is evaluated. Default is 6.
 #CRUNCH_ONET_NUMBER_LAST_SESSIONS=6
+#
 # ----------------------------------------------------------------
 # Nomination Pools configuration variables
 # ----------------------------------------------------------------
@@ -86,3 +96,15 @@ CRUNCH_POOL_ONLY_OPERATOR_COMPOUND_ENABLED=true
 # [CRUNCH_POOL_ALL_NOMINEES_PAYOUT_ENABLED] Enable payouts for ALL nominees assigned to the pools 
 # previously selected by CRUNCH_POOL_IDS.
 #CRUNCH_POOL_ALL_NOMINEES_PAYOUT_ENABLED=true
+#
+# ----------------------------------------------------------------
+# Transaction configuration variables
+# ----------------------------------------------------------------
+#
+# [CRUNCH_TX_TIP] Define a tip in PLANCKS for the block author.
+# 1 DOT = 10000000000 PLANCKS
+# 1 KSM = 1000000000000 PLANCKS
+#CRUNCH_TX_TIP=10
+#
+# [CRUNCH_TX_MORTAL_PERIOD] Define the number of blocks the transaction is mortal for; Default value is 64 blocks.
+#CRUNCH_TX_MORTAL_PERIOD=64
