set transactional mortal optional

--- a/.env.example
+++ b/.env.example
@@ -106,5 +106,5 @@ CRUNCH_POOL_ONLY_OPERATOR_COMPOUND_ENABLED=true
 # 1 KSM = 1000000000000 PLANCKS
 #CRUNCH_TX_TIP=10
 #
-# [CRUNCH_TX_MORTAL_PERIOD] Define the number of blocks the transaction is mortal for; Default value is 64 blocks.
-#CRUNCH_TX_MORTAL_PERIOD=64
+# [CRUNCH_TX_MORTAL_PERIOD] Define the number of blocks the transaction is mortal for.
+#CRUNCH_TX_MORTAL_PERIOD=32
