--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,13 @@ CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 # Please have a look at the file '.remote.stashes.example' as an example
 #CRUNCH_STASHES_URL=https://raw.githubusercontent.com/turboflakes/crunch/main/.remote.stashes.example
 #
+# [CRUNCH_GITHUB_PAT] Define a 'Github personal access token' with at least readonly access to the remote file 
+# containing the list of stashes in the github private file defined at 'CRUNCH_STASHES_URL'
+# Check how to create a personal access token here:
+# https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens
+#
+#CRUNCH_GITHUB_PAT=github_pat_123ABC...
+#
 # [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
 # connect. (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence
 # than <CHAIN> argument) 
