fix typo and update example

--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,13 @@ CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 #CRUNCH_GITHUB_PAT=github_pat_123ABC...
 #
 # [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
-# connect. (e.g. wss://kusama-rpc.polkadot.io) (NOTE: substrate_ws_url takes precedence
+# connect. (e.g. wss://rpc.turboflakes.io:443/kusama) (NOTE: substrate_ws_url takes precedence
 # than <CHAIN> argument) 
 #CRUNCH_SUBSTRATE_WS_URL=ws://localhost:9944
+#
+# [CRUNCH_SUBSTRATE_PEOPLE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to 
+# connect and retrieve identities from. (e.g. wss://sys.turboflakes.io:443/people-kusama)
+#CRUNCH_SUBSTRATE_PEOPLE_WS_URL=wss://sys.turboflakes.io:443/people-kusama
 #
 # [CRUNCH_MAXIMUM_PAYOUTS] Maximum number of unclaimed eras for which an extrinsic payout
 # will be submitted. (e.g. a value of 4 means that if there are unclaimed eras in the last
