draft light client support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ url = "2.2.2"
 base64 = "0.22.0"
 rand = "0.8.4"
 # subxt dependencies
-subxt = { version = "0.37.0", features = ["substrate-compat", "native", "unstable-reconnecting-rpc-client"] }
+subxt = { version = "0.37.0", features = ["substrate-compat", "native", "unstable-reconnecting-rpc-client", "unstable-light-client"] }
 subxt-signer = { version = "0.37.0", features = ["subxt"] }
 async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
 env_logger = "0.9.3"
