fix example and changelog

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 #
 #CRUNCH_GITHUB_PAT=github_pat_123ABC...
 #
+# [CRUNCH_LIGHT_CLIENT_ENABLED] Enable lightweight client to connect to substrate-based chains. 
+# With this option enabled there is no need to specify specific RPCs endpoints for 'substrate-ws-url' or 'substrate-people-ws-url'
+CRUNCH_LIGHT_CLIENT_ENABLED=true
+#
 # [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
 # connect. (e.g. wss://rpc.turboflakes.io:443/kusama) (NOTE: substrate_ws_url takes precedence
 # than <CHAIN> argument) 
