--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -9,7 +9,7 @@ name: Rust CI - Create Release
 jobs:
   check:
     name: Create Release
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
