--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crunch"
-version = "0.18.3"
+version = "0.19.1"
 authors = ["Paulo <paulo@turboflakes.io>"]
 description = "Crunch is a command-line interface (CLI) to claim staking rewards (flakes) every X hours for Substrate-based chains" 
 edition = "2018"
@@ -13,23 +13,22 @@ dotenv = "0.15"
 envy = "0.4"
 log = "0.4"
 clap = "2.33"
-lazy_static = "1.4"
-derive_more = "0.99"
-async-recursion = "1.0.5"
-serde = "1.0.132"
+lazy_static = "1.5"
+async-recursion = "1.1.1"
+serde = "1.0.218"
 serde_json = "1.0.68"
-thiserror = "^1.0.24"
-chrono = "0.4"
-regex = "1.4.6"
-reqwest = { version = "0.11", features = ["json"] }
-url = "2.2.2"
-base64 = "0.22.0"
-rand = "0.8.4"
+thiserror = "2.0.11"
+chrono = "0.4.40"
+regex = "1.11.1"
+reqwest = { version = "0.12.12", features = ["json"] }
+url = "2.5.4"
+base64 = "0.22.1"
+rand = "0.9.0"
 # subxt dependencies
 subxt = { version = "0.37.0", features = ["substrate-compat", "native", "unstable-reconnecting-rpc-client", "unstable-light-client"] }
 subxt-signer = { version = "0.37.0", features = ["subxt"] }
-async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
-env_logger = "0.9.3"
-futures = "0.3.13"
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
+async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
+env_logger = "0.11.6"
+futures = "0.3.31"
+codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = ["derive", "full", "bit-vec"] }
 hex = "0.4.3"
