add permissionless claim commission pool

--- a/.env.example
+++ b/.env.example
@@ -112,6 +112,11 @@ CRUNCH_POOL_ONLY_OPERATOR_COMPOUND_ENABLED=true
 # previously selected by CRUNCH_POOL_IDS.
 #CRUNCH_POOL_ALL_NOMINEES_PAYOUT_ENABLED=true
 #
+# [CRUNCH_POOL_CLAIM_COMMISSION_ENABLED] Enable permissionless claim pool commission
+# NOTE: Is only possible for the pool commission to be claimed permissionless, if the nomination pool root account
+# explicitly sets this feature via extrinsic `set_commission_claim_permission`.
+CRUNCH_POOL_CLAIM_COMMISSION_ENABLED=true
+#
 # ----------------------------------------------------------------
 # Transaction configuration variables
 # ----------------------------------------------------------------
